# scx

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
agents/: program.md  reviewer.md
agents/prompts/: bugfix.md  feature.md  refactor.md
docs/: architecture.md  conventions.md  eval.md  glossary.md  overview.md
scheds/rust/scx_invariant/: Cargo.toml  PLAN.md  build.rs
scheds/rust/scx_invariant/analysis/: reader.py  report.py  test_reader.py  trace.py
scheds/rust/scx_invariant/src/: cgroup.rs  main.rs  output.rs  pmu.rs  recorder.rs
scheds/rust/scx_invariant/src/bpf/: intf.h  main.bpf.c
work/: changelog.md  notes.md  plan.md  task.md
