[package]
name = "scx_invariant"
version = "0.1.0"
edition = "2021"
description = "sched_ext passthrough scheduler for recording scheduler-invariant workload identity"
license = "GPL-2.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
ctrlc = { version = "3", features = ["termination"] }
libbpf-rs = "=0.26.2"
libc = "0.2"
log = "0.4"
nix = { version = "0.29", features = ["fs", "process", "signal"] }
perf-event-open-sys = "6"
scx_utils = { path = "../../../rust/scx_utils", version = "1.1.0" }
simplelog = "0.12"

[build-dependencies]
scx_cargo = { path = "../../../rust/scx_cargo", version = "1.1.0" }
